account maintenance methods (untested)
